- footer social link attached : facebook logo missing - providers unlinked - Marketplace removed - Slack added and linked - Optimizer dropdown path issue fixed

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -8,7 +8,7 @@
               <li class="lineup-dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a>Lineup Optimizer<span class="caret"></span></a>
                 <div class="dropdown-content">
-                  <a routerLink="/lineup-optimizer1">MLB Optimizer</a>
+                  <a routerLink="/lineup-optimizer">MLB Optimizer</a>
                   <a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>
                 </div>
               </li>
@@ -68,7 +68,7 @@
                 <a routerLink="/articles">Articles</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <a routerLink="/market-place">Marketplace</a>
+                <a target="_blank" href="https://rotopros.slack.com">Slack</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/news">Player News</a>
