--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -6,12 +6,12 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
           <nav class="topNavbar">
             <ul class="pull-right">
-              <li routerLinkActive="active" *ngIf="role == 'provider'" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/provider-lineups">My Lineups</a>
-              </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/provider-public-lineups">Lineups</a>
-              </li>
+              <!--<li routerLinkActive="active" *ngIf="role == 'provider'" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a routerLink="/provider-lineups">My Lineups</a>-->
+              <!--</li>-->
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a routerLink="/provider-public-lineups">Lineups</a>-->
+              <!--</li>-->
               <li class="lineup-dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a>Lineup Optimizer<span class="caret"></span></a>
                 <div class="dropdown-content">
