--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
 <router-outlet></router-outlet>
+<div id="myModal" class="modal fade" role="dialog" #subscriptionAlert>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Subscription Required</h4>
+      </div>
+      <div class="modal-body">
+        <p style="font-size: 19px">Dear user it looks like you haven't subscribe to any plan yet, Please
+          <a routerLink="/subscribe" style="color: #0070ff"  data-dismiss="modal">subscribe now</a> and get access to full site.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
