--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="advance-feature-filters" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="advance-feature-filters" #settingPopup tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
