--- a/src/app/user/components/dashboard/dashboard-statics/dashboard-statics.component.html
+++ b/src/app/user/components/dashboard/dashboard-statics/dashboard-statics.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="bxTxtWrapper">
         <h4>Entries</h4>
-        <p>Lorem Ipsum is dummy text</p>
+        <!--<p>Lorem Ipsum is dummy text</p>-->
       </div>
     </div>
     <div class="bxBottom">
@@ -21,7 +21,7 @@
       </div>
       <div class="bxTxtWrapper">
         <h4>Fees Paid</h4>
-        <p>Lorem Ipsum is dummy text</p>
+        <!--<p>Lorem Ipsum is dummy text</p>-->
       </div>
     </div>
     <div class="bxBottom">
@@ -36,7 +36,7 @@
       </div>
       <div class="bxTxtWrapper">
         <h4>{{(contestData.net >= 0 || !contestData.net)?'Profit':'Loss'}}</h4>
-        <p>Lorem Ipsum is dummy text</p>
+        <!--<p>Lorem Ipsum is dummy text</p>-->
       </div>
     </div>
     <div class="bxBottom">
@@ -54,7 +54,7 @@
       </div>
       <div class="bxTxtWrapper">
         <h4>ROI</h4>
-        <p>Lorem Ipsum is dummy text</p>
+        <!--<p>Lorem Ipsum is dummy text</p>-->
       </div>
     </div>
     <div class="bxBottom">
