--- a/src/app/front/components/contact-analyzer/contact-analyzer.component.html
+++ b/src/app/front/components/contact-analyzer/contact-analyzer.component.html
@@ -27,10 +27,7 @@
           </h1>
           <p class="infoSecHedin">All your daily fantasy sports results in one place.</p>
 
-          <p class="infoPara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas tempor ante, porta
-            rhoncus sem euismod vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti.
-            Fusce risus purus, dictum id sapien sit amet, suscipit suscipit nibh. Aenean libero dolor, molestie eu
-            pulvinar sed, bibendum et nisl. </p>
+          <p class="infoPara">Use our contest to analyze your DFS statistics from multiple sites with just a few clicks. We currently support DraftKings and FanDuel </p>
 
           <ul style="text-align: left">
             <li><img src="../../../../assets/images/info_icn1.png" alt=""></li>
@@ -42,24 +39,24 @@
   </div>
 </section>
 
+<!--<section class="infoSection2">-->
+  <!--<div class="container ">-->
+    <!--<div class="row">-->
+      <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">-->
+        <!--<div class="infoSec2Lft">-->
+          <!--<h1 class="infoSec2Hedin"><span>Stay in sync </span> with our free browser extension for Chrome and Firefox-->
+          <!--</h1>-->
+
+          <!--<p class="infoPara"><strong>RotoTracker Sync </strong> keeps your data up to date with just one click. Free-->
+            <!--for all RotoTracker users <span>in the Chrome and Firefox app stores.</span></p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+<!--</section>-->
+
 <section class="infoSection2">
-  <div class="container ">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="infoSec2Lft">
-          <h1 class="infoSec2Hedin"><span>Stay in sync </span> with our free browser extension for Chrome and Firefox
-          </h1>
-
-          <p class="infoPara"><strong>RotoTracker Sync </strong> keeps your data up to date with just one click. Free
-            for all RotoTracker users <span>in the Chrome and Firefox app stores.</span></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</section>
-
-<section class="infoSection3">
   <div class="container ">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -73,10 +70,9 @@
           </h1>
           <p class="infoSecHedin">See where your strengths lie.</p>
 
-          <p class="infoPara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas tempor ante, porta
-            rhoncus sem euismod vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti.
-            Fusce risus purus, dictum id sapien sit amet, suscipit suscipit nibh. Aenean libero dolor, molestie eu
-            pulvinar sed, bibendum et nisl. </p>
+          <p class="infoPara">RotoPro's analyzer has the ability to track ALL of your contests simply by downloading your contest history and using our easy upload feature. </p>
+          <p class="infoPara">We want you to be able to see how you play, where your weaknesses lie, and what you are strong at. You can use this information to manage your budget, improve your game, and learn advanced tactics to get better over time!</p>
+          <p class="infoPara">We are constantly adding new features to our contest analyzer. Using one of our MANY tools you can destroy your competition.</p>
         </div>
       </div>
     </div>
@@ -96,9 +92,7 @@
           </h1>
           <p class="infoSecHedin">Crush the competition.</p>
 
-          <p class="infoPara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas tempor ante, porta
-            rhoncus sem euismod vitae. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-            potenti. </p>
+          <p class="infoPara">Our contest analyzer is easy to use. Once you have your results uploaded you can easily customize what you want to see. Let's say you want to see what your ROI is? What about over time? What months or sports are you best at on DFS? Who are your top enemies in h2h's? Do you win more at GPP's or double ups? You can seamlessly track all of this and more!. </p>
 
           <!--<a href="" class="bowerDwnBtn">Sign Up For Free and give RotoTracker a spin!</a>-->
         </div>
