--- a/src/app/front/components/extensions/extensions.component.html
+++ b/src/app/front/components/extensions/extensions.component.html
@@ -1,5 +1,5 @@
 <!-- Banner Section Starts-->
-<section class="bowerBannerSection">
+<section class="bowerBannerSection1">
   <div class="container ">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
