--- a/src/app/user/components/footer/user-footer.component.html
+++ b/src/app/user/components/footer/user-footer.component.html
@@ -10,23 +10,33 @@
           <p class="footerPara">RotoPros.com is a daily fantasy sports analytics platform that offers the best tools in the industry. RotoPros offers lineup optimizers, projections, daily sports content, podcasts, tools, and many premium features.</p>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1">
-          <h1 class="footerHdin">Links</h1>
-          <ul class="footerLinks">
-            <li><a href="#">Getting Started</a></li>
-            <li><a href="#">Free Content</a></li>
-            <li><a href="#">Member Content</a></li>
-            <li><a href="#">Apparel</a></li>
-          </ul>
+          <!--<h1 class="footerHdin">Links</h1>-->
+          <!--<ul class="footerLinks">-->
+            <!--<li><a href="#">Getting Started</a></li>-->
+            <!--<li><a href="#">Free Content</a></li>-->
+            <!--<li><a href="#">Member Content</a></li>-->
+            <!--<li><a href="#">Apparel</a></li>-->
+          <!--</ul>-->
         </div>
+        <!--<div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">-->
+          <!--<h1 class="footerHdin">Follow Us on :</h1>-->
+          <!--<ul class="footerSocialLinks">-->
+            <!--<li><a href="#"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>-->
+            <!--</li>-->
+            <!--<li><a href="#"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive"/></a>-->
+            <!--</li>-->
+            <!--<li><a href="#"><img src="../../../../assets/images/footer_insta_icn.png" alt=""-->
+                                 <!--class="img-responsive"/></a></li>-->
+          <!--</ul>-->
+        <!--</div>-->
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
           <h1 class="footerHdin">Follow Us on :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="#"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
+            <li><a href="https://twitter.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
             </li>
-            <li><a href="#"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive"/></a>
+            <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive"/></a>
             </li>
-            <li><a href="#"><img src="../../../../assets/images/footer_insta_icn.png" alt=""
-                                 class="img-responsive"/></a></li>
+            <li><a href="https://www.instagram.com/rotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
