--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -23,7 +23,7 @@
         <div class="row row30" *ngIf="isLogIn">
           <div class="col-lg-12 text-center yellow-container">
             <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()"
-               [class.disabled]="!isSettingsUpdated"><img
+               [class.inactive]="!isSettingsUpdated"><img
               src="../../../../../assets/img/save_general_n.png"/> Save
               Settings</a>
             <a class="btn btn-link btn-link-back" (click)="onBtnRestoreDefaultClicked()"><img
