--- a/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
+++ b/src/app/front/components/lineup-optimizer/adv-filter/adv-filter.component.html
@@ -1,4 +1,5 @@
-<div class="modal fade" id="advance-feature-filters" #settingPopup tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="advance-feature-filters" #settingPopup tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -343,6 +344,21 @@
         </div>
       </div>
       <!-- /Modal Body -->
+      <div class="subscription-alert-drop-back" *ngIf="showSubscriptionAlert">
+        <div class="subscription-alert">
+          <div class="alert-title">
+            Subscription Required
+          </div>
+          <div class="alert-content">
+            It looks like you do not have access to a plan yet. Please
+            <a (click)="onSubscribeLinkClick()" style="color: #0070ff" data-dismiss="modal">subscribe now</a> for full access to
+            RotoPros.
+          </div>
+          <div class="alert-footer">
+            <button type="button" class="btn btn-default" (click)="onSubscriptionAlertCloseClick()">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
