--- a/src/app/front/components/nfl-lineup-optimizer/nfl-filters/nfl-filters.component.html
+++ b/src/app/front/components/nfl-lineup-optimizer/nfl-filters/nfl-filters.component.html
@@ -20,7 +20,7 @@
 
       <!-- Modal Body -->
       <div class="modal-body">
-        <div class="row row30" *ngIf="isLogIn">
+        <div class="row row30" *ngIf="false"> <!--*ngIf="isLogIn"-->
           <div class="col-lg-12 text-center yellow-container">
             <a class="btn btn-link btn-link-back" (click)="onBtnSaveAdvFilterValueClicked()"
                [class.disabled]="!isSettingsUpdated"><img
