--- a/src/app/user/components/uploads/uploads.component.css
+++ b/src/app/user/components/uploads/uploads.component.css
@@ -48,3 +48,23 @@
   font-size: 16px;
   font-style: italic;
 }
+
+
+.block-drop-zone{
+  position: absolute;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.drop-zone-msg{
+  font-size: 20px;
+  color: #fff;
+  z-index: 21;
+}
