--- a/src/app/user/components/uploads/uploads.component.html
+++ b/src/app/user/components/uploads/uploads.component.html
@@ -56,7 +56,12 @@
                 <h1 class="dashboardMainHedin">Upload Files</h1>
                 <p class="dashboardMainPara">Alternatively, you can drag and drop an entry history file below.</p>
                 <div class="dUpldBxWrapper">
-                  <div class="dUpldBxLft">
+                  <div class="dUpldBxLft" style="position: relative;">
+                    <div class="block-drop-zone" *ngIf="isRestricted">
+                      <div class="drop-zone-msg">
+                        <a style="color: #fff;font-weight: bold;" routerLink="/subscribe">Subscribe now</a>
+                      </div>
+                    </div>
                     <dropzone [config]="configUpload" class="file-drop-zone" [message]="'Drop file here'"
                               (error)="onUploadError($event)"
                               (success)="onUploadSuccess($event)" (sending)="onSending($event)"></dropzone>
