--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -63,7 +63,7 @@
           <div class="menuToggle">
             <img src="../../../../assets/images/menu-toggle.png" alt=""/>
           </div>
-          <div class="mainMenu">
+          <div class="mainMenu" [ngStyle]="{'padding-right.px': isLoggedIn ? 300: 260}">
             <div class="closeBtn">
               <span><img src="../../../../assets/images/close_icn.png" alt="" class="img-responsive"/></span>
             </div>
@@ -99,19 +99,30 @@
                   Go to Dashboard
                 </a>
               </li>
-              <li class="loginBtn" *ngIf="isLoggedIn"><a (click)="btnLogoutClicked()">Logout</a></li>
-              <!--<li class="searchBtn">-->
-              <!--<a href="javascript:void(0)"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
-              <!--class="img-responsive"/></a>-->
-              <!--<div class="srchBar">-->
-              <!--<div class="form-group">-->
-              <!--<label class="srOnly">Search</label>-->
-              <!--<input type="text" name="search" placeholder="Search">-->
-              <!--</div>-->
-              <!--<button type="button"><img src="../../../../assets/images/search_icn.png" alt="LOGO"-->
-              <!--class="img-responsive"/></button>-->
-              <!--</div>-->
-              <!--</li>-->
+              <!--<li class="loginBtn" *ngIf="isLoggedIn"><a (click)="btnLogoutClicked()">Logout</a></li>-->
+              <li class="home-profile" *ngIf="isLoggedIn">
+                <div class="dropdown">
+                  <a href="javascript:void(0)" class="btn btn-default dropdown-toggle" type="button" id="profileDrpdwn"
+                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <span class="icnWrapperS">
+                  <!--<img src="../../../../assets/images/dashboard_profile_img.png" alt=""-->
+                  <!--class="img-responsive"/>-->
+                   <img
+                     #profilePic
+                     [attr.src]="profileImagePath ? 'https://api.dfsportgod.com/images/'+ profileImagePath : '../../../../assets/images/dashboard_profile_img.png'"
+                     alt=""
+                     class="img-responsive"/>
+                </span>
+
+                    <span class="profileName">{{loggedUser?.first_name}} {{loggedUser?.last_name}}</span>
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="profileDrpdwn">
+                    <!--<li><a href="#">My Profile</a></li>-->
+                    <li><a routerLink="/user/settings">Setting</a></li>
+                    <li><a (click)="logoutUser()">Log Out</a></li>
+                  </ul>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
