--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -30,6 +30,7 @@
                     <div class="plan-name">{{plan.name}}</div>
                     <div class="plan-price">{{(plan.amount / 100) | currency:'USD':true}}</div>
                     <div class="plan-time">{{'/'+plan.interval_count+' '+plan.interval}}</div>
+                    <div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>
                     <button class="btn-subscribe btn-lg btn-default" (click)="onBtnSubscribeClick(plan)">Subscribe
                     </button>
                   </div>
