Text changed from DF Sports God to RotoPros in Excel tool page and dfs-basics page.  Lineup optimizer menu is moved down in second menu.  Podecast list is removed from home page and showing latest 5 news.   Podecast menu removed from menu bar.   $ symbol is replace with % symbol in Dashboard ROI card.

--- a/src/app/front/components/dfs-basics/dfs-basics.component.html
+++ b/src/app/front/components/dfs-basics/dfs-basics.component.html
@@ -18,7 +18,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
         <h4 class="mainHeadingBlack">A BASIC GLOSSARY GUIDE TO DFS TERMINOLOGY</h4>
-        <p>Learn the DFS Lingo and converse with the Pros on the DF Sports God</p>
+        <p>Learn the DFS Lingo and converse with the Pros on RotoPros</p>
         <p class="smlP"><strong>Members Only Slack Channel</strong> (Paid Members Only)</p>
 
         <div class="glossaryPWrap">
