--- a/src/app/front/components/excel-tool/excel-tool.component.html
+++ b/src/app/front/components/excel-tool/excel-tool.component.html
@@ -51,7 +51,7 @@
             <div class="mlbInfoMidLft">
               <h4 class="mlbInfoMidHedin"><span class="icnWrapperS"><img src="../../../../assets/images/installation_icn.png" alt="" class="img-responsive"></span>Installation </h4>
               <ul class="mlbInfoLst">
-                <li><span>1</span>Click the Download Button above and install the DF Sports Gods MLB Optimizer. You must have the PC version of Microsoft Excel installed on your computer.</li>
+                <li><span>1</span>Click the Download Button above and install the RotoPros MLB Optimizer. You must have the PC version of Microsoft Excel installed on your computer.</li>
                 <li><span>2</span>Click on the verification email and set your password.</li>
               </ul>
             </div>
