--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -12,13 +12,13 @@
               <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
                 <!--<a routerLink="/provider-public-lineups">Lineups</a>-->
               <!--</li>-->
-              <li class="lineup-dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a>Lineup Optimizer<span class="caret"></span></a>
-                <div class="dropdown-content">
-                  <a routerLink="/lineup-optimizer">MLB Optimizer</a>
-                  <a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>
-                </div>
-              </li>
+              <!--<li class="lineup-dropdown" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
+                <!--<a>Lineup Optimizer<span class="caret"></span></a>-->
+                <!--<div class="dropdown-content">-->
+                  <!--<a routerLink="/lineup-optimizer">MLB Optimizer</a>-->
+                  <!--<a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>-->
+                <!--</div>-->
+              <!--</li>-->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/excel-tool">Excel Tool<span class="sr-only">(current)</span></a>
               </li>
