--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -5,14 +5,14 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
           <nav class="topNavbar">
             <ul class="pull-right">
-              <li class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
+              <!--<li class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
                   [routerLinkActiveOptions]="{exact: false}">
                 <a>Lineup Optimizer<span class="caret"></span></a>
                 <div class="dropdown-content">
                   <a routerLink="/lineup-optimizer">MLB Optimizer</a>
                   <a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>
                 </div>
-              </li>
+              </li>-->
               <!--<li class="dropdown lineup-menu-mobile-view" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">-->
               <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1-->
               <!--<span class="caret"></span></a>-->
@@ -84,14 +84,21 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/news">Player News</a>
               </li>
-              <li><a>Podcasts</a></li>
+              <li class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
+                  [routerLinkActiveOptions]="{exact: false}">
+                <a>Lineup Optimizer<span class="caret"></span></a>
+                <div class="dropdown-content">
+                  <a routerLink="/lineup-optimizer">MLB Optimizer</a>
+                  <a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>
+                </div>
+              </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineups">Lineups</a>
               </li>
             </ul>
           </div>
           <div class="rightNav">
-            <ul>
+            <ul style="flex-wrap: nowrap">
               <li class="loginBtn" *ngIf="!isLoggedIn"><a routerLink="/login">Login</a></li>
               <li class="signUpBtn" *ngIf="!isLoggedIn"><a routerLink="/signup">Sign Up</a></li>
               <li class="signUpBtn" *ngIf="isLoggedIn">
