--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -6,3 +6,11 @@
   height: 150px;
   width: 100%;
 }
+
+.news-item {
+  border-top: 1px solid #eee;
+}
+
+.news-item:first-child {
+  border-top: none;
+}
