--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -111,38 +111,39 @@
 
           <div class="ylwTpBxInfoWrap">
             <div class="ylwTpBx clearfix">
-              <h3>Podcast Preview <span><img src="../../../../assets/images/blkArow.png"></span></h3>
-              <p><img src="../../../../assets/images/rght_icn2.png" alt="" class="img-responsive"></p>
+              <h3>Latest News <span><img src="../../../../assets/images/blkArow.png"></span></h3>
+              <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
             </div>
             <div class="ylwTpBxBtm">
               <div class="ylwTpBxBtmBx2Wrap">
-                <div class="ylwTpBxBtmBx2">
-                  <h4>Sed ut perspiciatis unde omnis</h4>
-                  <p>Lorem ipsum iusto odio dignissimos ducimus qui blanditiis.iusto odio dignissimos ducimus .</p>
+                <div class="news-item item" *ngFor="let news of allNewsRecords">
+                  <img style="width: 100px;margin: 0 auto;" [attr.src]="news?.player?.player_image" alt=""
+                       class="img-responsive">
+                  <div class="nltstNwsInfoTpWrp">
+                    <div class="nltstNwsInfoTp clearfix">
+                      <div class="nltstNwsInfoDte">
+                          <span class="icnWrapperS"><img src="../../../../assets/images/nDateIcn.png" alt=""
+                                                         class="img-responsive"></span>
+                        <i>{{news?.news_date_time | date : 'MMM dd, yyyy'}}</i>
+                      </div>
+                      <div class="nltstNwsInfoTme">
+                          <span class="icnWrapperS"><img src="../../../../assets/images/nclck_icn.png" alt=""
+                                                         class="img-responsive"></span>
+                        <i>{{news?.news_date_time | date : 'hh:mm a'}}</i>
+                      </div>
+                    </div>
+                    <div class="nltstNwsInfoBtm">
+                      <h4>{{news?.news_headline}}</h4>
+                      <p class="news-notes">{{news?.news_notes}}</p>
+                    </div>
+                  </div>
+
                 </div>
-                <div class="ylwTpBxBtmBx2">
-                  <h4>Sed ut perspiciatis unde omnis</h4>
-                  <p>Lorem ipsum iusto odio dignissimos ducimus qui blanditiis.iusto odio dignissimos ducimus .</p>
-                </div>
-                <div class="ylwTpBxBtmBx2">
-                  <h4>Sed ut perspiciatis unde omnis</h4>
-                  <p>Lorem ipsum iusto odio dignissimos ducimus qui blanditiis.iusto odio dignissimos ducimus .</p>
-                </div>
-                <div class="ylwTpBxBtmBx2">
-                  <h4>Sed ut perspiciatis unde omnis</h4>
-                  <p>Lorem ipsum iusto odio dignissimos ducimus qui blanditiis.iusto odio dignissimos ducimus .</p>
-                </div>
-                <div class="ylwTpBxBtmBx2">
-                  <h4>Sed ut perspiciatis unde omnis</h4>
-                  <p>Lorem ipsum iusto odio dignissimos ducimus qui blanditiis.iusto odio dignissimos ducimus .</p>
-                </div>
-                <a href="javascript:void(0)"><img src="../../../../assets/images/blkDwnArow.png" alt=""
-                                                  class="img-responsive"></a>
               </div>
             </div>
           </div>
 
-          <div class="ylwTpBxInfoWrap">
+          <!--<div class="ylwTpBxInfoWrap">
             <div class="ylwTpBx clearfix">
               <h3 routerLink="/news">Latest News<span><img src="../../../../assets/images/blkArow.png"></span></h3>
               <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
@@ -177,7 +178,7 @@
               </div>
             </div>
 
-          </div>
+          </div>-->
         </div>
         <div class="indexNPrt2Mid">
 
