Video added in sign up page. Lineup optimizer dropdown menu ui changed

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -36,9 +36,9 @@
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/basics">DFS Basics</a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/subscribe">Plans</a>
-              </li>
+              <!-- <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                 <a routerLink="/subscribe">Plans</a>
+               </li>-->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/faq">FAQ</a>
               </li>
@@ -93,8 +93,11 @@
                 </div>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/lineups">Lineups</a>
+                <a routerLink="/subscribe">Plans</a>
               </li>
+              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/lineups">Lineups</a>
+              </li>-->
             </ul>
           </div>
           <div class="rightNav">
