--- a/src/app/front/components/header/front-header.component.css
+++ b/src/app/front/components/header/front-header.component.css
@@ -12,12 +12,14 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 5px;
+  right: -12px;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 12px 16px !important;
+  padding: 5px 12px !important;
   text-decoration: none;
   display: block;
 }
@@ -27,9 +29,55 @@
   background-color: #f1f1f1
 }
 
+.dropdown-content a:first-child:hover {
+  background-color: #f1f1f1;
+  border-radius: 5px 5px 0 0;
+}
+
+.dropdown-content a:last-child:hover {
+  background-color: #f1f1f1;
+  border-radius: 0 0 5px 5px;
+}
+
+.dropdown-content:after {
+  content: "";
+  position: absolute;
+  right: 8px;
+  bottom: 100%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 8px 8px 8px;
+  border-color: transparent transparent #f9f9f9 transparent;
+  z-index: 9998;
+}
+
 /* Show the dropdown menu on hover */
 .lineup-dropdown:hover .dropdown-content {
   display: block;
+  -webkit-animation: mymove 250ms; /* Safari 4.0 - 8.0 */
+  animation: mymove 250ms;
+  -webkit-animation-fill-mode: forwards;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* Standard syntax */
+@keyframes mymove {
+  0% {
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
 }
 
 /*.lineup-menu-full-view {
@@ -50,6 +98,6 @@
   }
 }*/
 
-.home-profile{
+.home-profile {
 
 }
