--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -115,5 +115,16 @@
       </div>
     </div>
   </div>
+
+  <div class="row signup-video">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RpRcXAlSXio?rel=0" frameborder="0"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-sm-2"></div>
+  </div>
 </section>
 <!-- Login Page Ends -->
