--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -85,7 +85,7 @@
                 <a routerLink="/news">Player News</a>
               </li>
               <li class="lineup-dropdown lineup-menu-full-view" routerLinkActive="active"
-                  [routerLinkActiveOptions]="{exact: false}">
+                  [routerLinkActiveOptions]="{exact: true}">
                 <a>Lineup Optimizer<span class="caret"></span></a>
                 <div class="dropdown-content">
                   <a routerLink="/lineup-optimizer">MLB Optimizer</a>
