--- a/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
+++ b/src/app/front/components/lineup-optimizer/generated-lineups/generated-lineups.component.html
@@ -4,8 +4,11 @@
   <section class="my-section title-container">
     <div class="row">
       <div class="col-md-12">
-        <h4 class="content-title">{{getSlateName()}}<a class="btn btn-sm" href="#"><img
-          src="../../../../../assets/images/pen.png" alt="edit"/></a></h4>
+        <h4 class="content-title">{{getSlateName()}}
+          <a style="display: none" class="btn btn-sm" href="#">
+            <img src="../../../../../assets/images/pen.png" alt="edit"/>
+          </a>
+        </h4>
       </div>
     </div>
   </section>
